	struct hit.hit_point -> RT_HIT_POINT [deprecated pre-7.0]
	struct hit.hit_normal -> RT_HIT_NORMAL [deprecated pre-7.0]


**********************************************************************
***                       OBSOLETED CHANGES                        ***
**********************************************************************
                    (reverse chronological order)

7.28.0
------
pixdsplit, rt -d
	removed, broken tool [minimally impacting]
libmultispectral, rttherm, ssamp-bw, ssampview, ssampview.tcl
	removed, broken tools [minimally impacting]

7.26.0
------
dbcp
	dbcp -> dd [deprecated 7.18]
pov (mged)
	removed, undocumented command with many alternatives [minimally impacting]
polybinout (mged)
	removed, undocumented command, use plot [minimally impacting]
pl (mged)
	removed, use plot [minimally impacting]
conf.h
	removed - replaced with common.h [deprecated 7.0]
UtahRLE image tools
	no longer installed by default with BRL-CAD - not used directly by
	BRL-CAD tools [minimally impacting]
Tcl in libbu and libbn
	no longer utilize or require Tcl [dependency eliminated]
Tcl/Tk man pages
	no longer installed by default with BRL-CAD when the bundled Tcl/Tk is used
	to build [minimally impacting]
include/dg.h
	implementation detail no longer being exposed, use libged [deprecated 7.22]
autogen.sh && configure
	GNU Autotools build system -> CMake build system [deprecated 7.20]
Dunn camera and Canon printer tools
	dunncolor [deprecated 7.16]
	dunnsnap [deprecated 7.16]
	canonize [deprecated 7.16]
genptr_t/GENPTR_NULL
	genptr_t -> void* [deprecated 7.16]
include/bu.h
	bu_argv0() -> bu_basename(bu_argv0_full_path(), NULL) [deprecated 7.16]
include/dm_color.h
	dm_color.h -> dm.h [deprecated 7.14]
include/fb.h
	FB_WPIXEL -> fb_wpixel [deprecated 7.14]
include/raytrace.h
	rt_fdiff -> NEAR_ZERO [deprecated 7.14]
	rt_reldiff -> NEAR_ZERO [deprecated 7.14]
	DIR_* -> RT_DIR_* [deprecated 7.14]
	RT_HIT_NORM -> RT_HIT_NORMAL [deprecated 7.12]
include/vmath.h