@@ -385,6 +385,8 @@ include/raytrace.h
 
 7.28.0
 ------
+rt -f framerate
+	removed [minimally impacting]
 pixdsplit, rt -d
 	removed, broken tool [minimally impacting]
 libmultispectral, rttherm, ssamp-bw, ssampview, ssampview.tcl
